# CLUBBiNN

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE_CLUBB  README.md  clubbed.yml  clubbin.yml  pyproject.toml  setup.py
.github/workflows/: codequality.yaml  testing.yaml
analysis_notebooks/: plot_anisotropicTKE.ipynb  plot_anisotropicTKE_BOMEX.ipynb  plot_anisotropicTKE_DYCOMS.ipynb  plot_anisotropicTKE_LBA.ipynb  plot_distribution_C14_1LES.ipynb  plot_distribution_C14_BOMEX.ipynb  plot_distribution_C14_DYCOMS.ipynb  plot_distribution_C14_LBA.ipynb  test_mixing_length.ipynb  test_stagger.ipynb
datasets/: BOMEX_64x64x75_100m_40m_1s.nc
notebooks/: test_mixing_length.ipynb
scripts/: clean_notebooks.sh
subgrid_parameterization/arch/: ann.py
subgrid_parameterization/preprocess/: C14.py  SAM_helpers.py  mixing_length.py  torch_helpers.py
subgrid_parameterization/util/: earlystopper.py  plot_helpers.py
test/: conftest.py  test_arch.py  test_compute_mixing_length.py  test_datasets.py  test_saminterface.py  test_train.py  test_training_utils.py
test/data/: BOMEX_pruned_thinned.nc  README.md  reference_CLUBB_zm_grid.csv  (+4 more)
test_notebooks/: test_mixing_length.ipynb
tests/: conftest.py  test_bomex_analysis.py
train_notebooks/: C14_TKEterms_LupLdownHconst_2LES.ipynb  C14_TKEterms_LupLdownHconst_2LEStogether_clipped.ipynb  C14_TKEterms_LupLdownHconst_BOMEX.ipynb  C14_TKEterms_LupLdownHconst_BOMEXtest.ipynb  C14_TKEterms_LupLdownHconst_DYCOMS.ipynb  C14_TKEterms_LupLdownHconst_DYCOMS1.ipynb  C14_TKEterms_LupLdownHconst_DYCOMS2.ipynb  C14_TKEterms_LupLdownHconst_allLES.ipynb  C14_TKEterms_LupLdownHconst_singleLES.ipynb  C14_TKEterms_LupLdownHconst_trainBOMEX_testDYCOMS.ipynb  C14_TKEterms_LupLdownHconst_trainDYCOMS_testBOMEX.ipynb  C14_allLES_net.pt  C14_allLES_optim.pt  C14_clipped.pt
(+15 files in other folders)
